--- a/index.html
+++ b/index.html
@@ -88,6 +88,10 @@
         </div>
         <div class="weatherTemp">Seoul, 22</div>
       </div>
+      <div class="jeans">
+        <img src="dev-jeans (1).png" alt="img" />
+        <img src="dev-jeans.png" alt="img" />
+      </div>
     </main>
     <script src="API_Key.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
